--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,11 @@ POM_SCM_URL=https://github.com/Bearded-Hen/BHFileBrowser
 POM_SCM_CONNECTION=scm:git@github.com:Bearded-Hen/BHFileBrowser.git
 POM_SCM_DEV_CONNECTION=scm:git@github.com:Bearded-Hen/BHFileBrowser.git
 POM_LICENCE_NAME=The MIT License (MIT)
-POM_LICENCE_URL=https://github.com/Bearded-Hen/Android-Bootstrap/blob/master/LICENSE
+POM_LICENCE_URL=https://github.com/Bearded-Hen/BHFileBrowser/blob/master/LICENSE.TXT
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=beardedhen
 POM_DEVELOPER_NAME=Bearded-Hen
 
-POM_NAME=Android-Bootstrap Library
-POM_ARTIFACT_ID=androidbootstrap
+POM_NAME=BHFileBrowser Library
+POM_ARTIFACT_ID=bhfilebrowser
 POM_PACKAGING=aar
